src/composer/snapshots/seele__composer__execute__tests__execute_submission@submission_complex_1.yaml.snap
---
source: src/composer/execute.rs
expression: results
input_file: src/composer/stubs/submission_complex_1.yaml
---
[
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 1,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 201,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 202,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 301,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 302,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 303,
  ),
]
