src/composer/snapshots/seele__composer__execute__tests__execute_submission@submission_nested_sequence_2.yaml.snap
---
source: src/composer/execute.rs
expression: results
input_file: src/composer/stubs/submission_nested_sequence_2.yaml
---
[
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 1,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 21,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 22,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 3,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 41,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 421,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 422,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 423,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 431,
  ),
]
