src/composer/snapshots/seele__composer__execute__tests__execute_submission@submission_simple.yaml.snap
---
source: src/composer/execute.rs
expression: results
input_file: src/composer/stubs/submission_simple.yaml
---
[
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 1,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 2,
  ),
  ActionNoopConfig(
    action: "seele/noop@1",
    test: 3,
  ),
]
